Add annotation for AuthorController
