# schemas/Author.php
@@ -1,0 +1,15 @@
+<?php
+
+/**
+ * @OA\Schema(
+ *     schema="Author",
+ *     title="Author",
+ *     description="Author entity",
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="first_name", type="string", example="John"),
+ *     @OA\Property(property="last_name", type="string", example="Baumbach"),
+ *     @OA\Property(property="bio", type="string", example="Est aperiam optio dolor id et earum. Quasi rem nobis quibusdam doloremque illo. Exercitationem explicabo temporibus quibusdam ut."),
+ *     @OA\Property(property="updated_at", type="string", example="2023-07-11T07:05:21.000000Z"),
+ *     @OA\Property(property="created_at", type="string", example="2023-07-11T07:05:21.000000Z"),
+ * )
+ */
